# myCodingAgent

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: full_features.py  minimal.py  with_tools.py
xiaozhi/: __init__.py  agent.py  aio.py  background.py  cli.py  config.py  context_manager.py  decorators.py  hooks.py  json_utils.py  llm.py  llm_async.py  message_utils.py  orchestration.py  prompt_builder.py  statistics.py  tool_runner.py  tool_runner_async.py  tool_utils.py  tools.py  tracer.py
xiaozhi/components/: __init__.py  amem_official.py  amem_sys.py  cron.py  mcp.py  memory.py  skills.py  tasks.py  team.py  trace_server.py  worktree.py
