[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xiaozhi"
version = "0.1.0"
description = "小智 —— 一个自研的、可嵌入的轻量 Agent 框架（OpenAI 兼容）"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "AgentLearn" }]
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# trace 可视化网页服务用标准库即可，无额外依赖；此处保留占位以便未来扩展
dev = ["pytest>=7.0"]
# 记忆系统增强档（A-Mem）：lite 档零依赖；下列仅 hybrid/persist/official 档惰性加载
memory = [
    "sentence-transformers>=2.2.0",  # dense 向量编码（hybrid/persist/official）
    "rank-bm25>=0.2.2",              # BM25 稀疏检索（hybrid/persist 融合）
    "chromadb>=0.4.0",               # 持久化向量库（persist 档）
]

[project.scripts]
xiaozhi = "xiaozhi.cli:main"

[tool.setuptools.packages.find]
include = ["xiaozhi*"]
